--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,29 @@
-#fullname{
-	display:none;
-	position:absolute;
-	background:red;
-	width:50%;
-	height:300px;
-	left:50%;
-	margin-left:-25%;
+#fullname {
+    display: none;
+    position: absolute;
+    background: white;
+    border-radius: 10px;
+    border: 1px solid gray;
+    width: 300px;
+    height: 200px;
+    z-index: 50;
+}
+
+#eventname {
+    text-align: center;
+}
+.dates *{
+    padding: 5px;
+    text-align: center;
+}
+hr{
+    padding: 0px;
+    margin: 10px;
+    color: gray;
+}
+
+.vis-item.red {
+    color: white;
+    background-color: red;
+    border-color: darkred;
 }
