--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
-body {
-
+body, html {
+    font-family: arial, sans-serif;
+    font-size: 11pt;
 }
 
 #fullname {
@@ -11,6 +12,7 @@ body {
     width: 300px;
     height: 200px;
     z-index: 50;
+    transition: all 2s linear;
 }
 
 #eventname {
