Стилизовал всплывающее окно под Google Charts

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,9 @@
     <h3 id="eventname">Test</h3>
     <hr>
     <div class="dates">
-        <div><b>Дата начала: </b><span id="start"></span></div>
-        <div><b>Дата конца: </b><span id="end"></span></div>
+        <div><span id="start"></span>-<span id="end"></span></div>
+      <div><b>Продолжительность: </b><span id="duration"></span> дн.</div>
     </div>
-    <hr>
 </div>
 
 </html>
