--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body, html {
-    font-family: arial, sans-serif;
+    font-family: "Helvetica", "Arial", sans-serif;
     font-size: 11pt;
 }
 
@@ -7,26 +7,36 @@ body, html {
     display: none;
     position: absolute;
     background: white;
-    border-radius: 10px;
-    border: 1px solid gray;
-    width: 300px;
-    height: 200px;
+    border-radius: 2px;
+    border: solid 1px #bdbdbd;
+    width: 240px;
+    height: 150px;
+    font-size: 12px;
     z-index: 50;
 }
 
 #eventname {
-    text-align: center;
+    text-align: left;
+    font-size: 14px;
+    padding-left: 2em;
+}
+
+.dates{
+    margin: auto;
 }
 
 .dates * {
-    padding: 5px;
-    text-align: center;
+    margin: auto;
+    padding: 0.5em 0em 0.5em 0.5em;
+    text-align: left;
+    font-size: 14px;
 }
 
 hr {
     padding: 0px;
     margin: 10px;
-    color: gray;
+    color: #bdbdbd;
+    opacity: 0.3;
 }
 
 .vis-timeline {
@@ -42,3 +52,15 @@ hr {
 .vis-item .vis-item-overflow {
     overflow: visible;
 }
+/*
+
+.vis-background {
+    color: lightgray;
+    opacity: 1;
+}
+
+.vis-background:hover {
+    color: red;
+    opacity: 1;
+    z-index: 15;
+}*/
