--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,7 @@ hr {
     color: white;
     background-color: red;
     border-color: darkred;
+    cursor: pointer;
 }
 
 .vis-range:hover{
@@ -57,7 +58,6 @@ hr {
     color:black;
 }
 
-/*
 
 .vis-background {
     color: lightgray;
@@ -66,6 +66,5 @@ hr {
 
 .vis-background:hover {
     color: red;
-    opacity: 1;
-    z-index: 15;
-}*/
+    opacity: 1
+}
