- Добавил форму поиска (нужно настроить стили) - Jquery теперь хранится локально - Подключил полные модули bootstrap

--- a/static/style.css
+++ b/static/style.css
@@ -17,10 +17,11 @@ body, html {
 #eventname {
     text-align: center;
     font-size: 14px;
+    font-weight: bold;
 }
 
 .dates {
-    height: 70px
+    height: 80px
 }
 
 .dates * {
