--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,33 @@
 <html lang="ru">
 <head>
     {% load static %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <script type="text/javascript" src="{% static 'jquery-3.2.1.min.js' %}"></script>
+
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vis-timeline-graph2d.min.css' %}">
+
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
+    <script type="text/javascript" src="{% static 'bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vis.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
 </head>
 
 <body>
 </body>
-
+<form method="POST" class="post-form form-inline">{% csrf_token %}
+    {{ form }}
+    <button type="submit" class="save btn btn-default"> Найти</button>
+</form>
+<br>
 <div id="graph"></div>
 <div id="fullname">
     <h3 id="eventname">Test</h3>
     <hr>
     <div class="dates">
         <div><span id="start"></span><span>-</span><span id="end"></span></div>
-      <div><b>Продолжительность: </b><span id="duration"></span> дн.</div>
+        <div><b>Продолжительность: </b><span id="duration"></span> дн.</div>
     </div>
 </div>
 
