Фикс для незакрывания меню при клике в списках

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                            aria-haspopup="true" aria-expanded="false" id="filters_btn">
                         Фильтры <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
