--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,10 @@ body, html {
     border-radius: 4px
 }
 
+#filters_btn{
+    margin-top: 10px;
+}
+
 #fullname {
     display: none;
     position: absolute;
