--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
 </body>
 <div class="container-fluid">
     <div class="row">
-        <form method="POST" action="{% url 'search' %}" class="post-form form-inline">{% csrf_token %}
+        <form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">{% csrf_token %}
             <div class="row">
                 {{ form.name }}
-                <button type="submit" class="save btn btn-success"> Найти</button>
+                <button id="find_btn" type="submit" class="save btn btn-success">Найти</button>
             </div>
             <div class="row">
                 <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#filters"
@@ -33,12 +33,12 @@
                     <div class="well">
                         {% for field in form %}
                             {% if field.name != 'name' %}
-                                    <div class="form-group">
-                                        <label class="control-label"
-                                               for="{{ field.id_for_label }}">{{ field.label }}</label>
-                                        <br>
-                                        {{ field }}
-                                    </div>
+                                <div class="form-group">
+                                    <label class="control-label"
+                                           for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                    <br>
+                                    {{ field }}
+                                </div>
                             {% endif %}
                         {% endfor %}
                     </div>
@@ -47,6 +47,26 @@
             </div>
         </form>
     </div>
+
+    <script type="text/javascript">
+        var frm = $('#search');
+        frm.submit(function () {
+            $.ajax({
+                type: frm.attr('method'),
+                url: frm.attr('action'),
+                data: frm.serialize(),
+                success: function (data) {
+                    alert(data);
+                    console.log(data);
+                },
+                error: function (data) {
+                    console.log(data.responseText);
+                }
+            });
+            return false;
+        });
+    </script>
+
     <div class="row">
         <div id="graph"></div>
         <div id="fullname">
