--- a/static/style.css
+++ b/static/style.css
@@ -61,11 +61,12 @@ hr {
     opacity: 1;
 }
 
-.vis-backgroundL .vis-item-content:hover {
+.vis-background .vis-item-content:hover {
     font-size: 14pt;
     text-shadow: 1px 1px 2px gray;
     z-index: 50;
 }
+
 
 /* Стили для className item-ов */
 .red {
