Промежуточный коммит. Добавил функцию для фильтрации событий "на лету", пытаюсь разобраться с отображением/скрытием групп

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,16 @@
         </form>
     </div>
     <div class="row">
+        <div class="btn-group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                Отображаемые типы <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+            </ul>
+        </div>
+    </div>
+    <div class="row">
         <div id="graph"></div>
         <div id="fullname">
             <h3 id="eventname">Test</h3>
