-Отделил стили для classItems и всплывающего окна, отделил js для всплывающего окна

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vis-timeline-graph2d.min.css' %}">
 
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-
     <script type="text/javascript" src="{% static 'bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'vis.min.js' %}"></script>
+
+    <link rel="stylesheet" href="{% static 'fullnameForm.css' %}">
+    <link rel="stylesheet" href="{% static 'search.css' %}">
+    <link rel="stylesheet" href="{% static 'classItems.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+
+    <script  type="text/javascript" src="{% static 'fullnameForm.js' %}"></script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
 </head>
 
