--- a/static/style.css
+++ b/static/style.css
@@ -1,51 +1,16 @@
 body, html {
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: 11pt;
+    background-color: #f0f0f0;
 }
-
 #fullname, .div-range, .btn {
     border-radius: 4px
 }
 
-/* Стили для всплывающего окна с продолжительносттью события */
-#fullname {
-    display: none;
-    position: absolute;
-    background: white;
-    border: solid 1px #bdbdbd;
-    width: 260px;
-    font-size: 12px;
-    z-index: 50;
-    box-shadow: 0 0 5px gray;
-}
-
-#eventname {
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 5px;
-}
-
-.dates {
-    height: 80px
-}
-
-.dates * {
-    margin: auto;
-    padding: 0.5em 0em 0.5em 0.5em;
-    text-align: left;
-    font-size: 14px;
-}
-
-hr {
-    padding: 0px;
-    margin: 10px;
-    color: #bdbdbd;
-    opacity: 0.3;
-}
 
 /* Общие стили для vis.js объектов */
 .vis-timeline {
+    background: white;
     /*border: none;*/
 }
 
@@ -74,69 +39,3 @@ hr {
     text-shadow: 1px 1px 2px gray;
     color: lightgray;
 }*/
-
-
-/* Стили для className item-ов */
-.red {
-    background: red;
-    border-color: darkred;
-    color: white;
-}
-
-.blue {
-    background: rgb(66, 133, 244);
-    border-color: darkblue;
-    color: white;
-}
-
-.purple {
-    background: rgb(171, 71, 188);
-    border-color: darkmagenta;
-    color: white;
-}
-
-.green {
-    background: rgb(15, 157, 88);
-    border-color: darkgreen;
-    color: white;
-}
-
-.yellow {
-    background: rgb(244, 180, 0);
-    border-color: darkgoldenrod;
-    color: black;
-}
-
-.red:hover, .blue:hover, .green:hover, .purple:hover, .yellow:hover {
-    color: black;
-    opacity: 0.75;
-}
-
-/* Стили  для виджетов поиска */
-form {
-    margin: 10px 10%;
-}
-
-.form-group {
-    margin: 5px 5px;
-}
-
-.well {
-    margin: 5px 0;
-    display: flex;
-    justify-content: space-between;
-
-}
-
-#id_toponyms, #id_persons, #id_event_type {
-    width: 100%;
-}
-
-#id_name {
-    margin: 10px 0;
-    width: 90%;
-}
-
-#filters_btn {
-    margin-top: 10px;
-}
