--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,24 @@
 <head>
     {% load static %}
 
-    <script type="text/javascript" src="{% static 'jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vis.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
 
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'vis-timeline-graph2d.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
 
-    <script type="text/javascript" src="{% static 'bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'vis.min.js' %}"></script>
 
-    <link rel="stylesheet" href="{% static 'fullnameForm.css' %}">
-    <link rel="stylesheet" href="{% static 'search.css' %}">
-    <link rel="stylesheet" href="{% static 'classItems.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fullnameForm.css' %}">
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
+    <link rel="stylesheet" href="{% static 'css/classItems.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <script  type="text/javascript" src="{% static 'fullnameForm.js' %}"></script>
-    <script type="text/javascript" src="{% static 'script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/fullnameForm.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </head>
 
 <body>
@@ -36,8 +39,36 @@
                 </button>
                 <div class="collapse" id="filters">
                     <div class="well">
+                        <!--- Datepicker widget !-->
+                        <div class="form-group">
+                            <label class="control-label"
+                                   for="{{ form.start_date.id_for_label }}">{{ form.start_date.label }}</label>
+                            <br>
+                            <div class='input-group date' id='start_date'>
+                                {{ form.start_date }}
+                                <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                             </span>
+                            </div>
+                        </div>
+                        <!--- Datepicker widget !-->
+
+                        <!--- Datepicker widget !-->
+                        <div class="form-group">
+                            <label class="control-label"
+                                   for="{{ form.end_date.id_for_label }}">{{ form.end_date.label }}</label>
+                            <br>
+                            <div class='input-group date' id='end_date'>
+                                {{ form.end_date }}
+                                <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                             </span>
+                            </div>
+                        </div>
+                        <!--- Datepicker widget !-->
+
                         {% for field in form %}
-                            {% if field.name != 'name' %}
+                            {% if field.name != 'name' and field.name != 'start_date'  and field.name != 'end_date' %}
                                 <div class="form-group">
                                     <label class="control-label"
                                            for="{{ field.id_for_label }}">{{ field.label }}</label>
@@ -52,6 +83,18 @@
             </div>
         </form>
     </div>
+
+
+    <script type="text/javascript">
+        $(function () {
+            $('#start_date').datetimepicker(
+                    {locale: 'ru', format: 'L'}
+            );
+             $('#end_date').datetimepicker(
+                    {locale: 'ru', format: 'L'}
+            );
+        });
+    </script>
     <div class="row">
         <div id="graph"></div>
         <div id="fullname">
