--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
     <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/vis.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vis.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/fullnameForm.css' %}">
     <link rel="stylesheet" href="{% static 'css/search.css' %}">
@@ -20,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <script type="text/javascript" src="{% static 'js/fullnameForm.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/infoTabs.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </head>
 
@@ -84,17 +84,6 @@
         </form>
     </div>
 
-
-    <script type="text/javascript">
-        $(function () {
-            $('#start_date').datetimepicker(
-                    {locale: 'ru', format: 'L'}
-            );
-             $('#end_date').datetimepicker(
-                    {locale: 'ru', format: 'L'}
-            );
-        });
-    </script>
     <div class="row">
         <div id="graph"></div>
         <div id="fullname">
@@ -103,6 +92,29 @@
             <div class="dates">
                 <div><span id="start"></span><span>-</span><span id="end"></span></div>
                 <div><b>Продолжительность: </b><span id="duration"></span> дн.</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container" id="info_tabs">
+            <a href="#" id="btnAdd"><i class="icon-plus-sign-alt"></i> Add Tab</a>
+            <br><br>
+
+
+            <ul class="nav nav-tabs nav-justified" role="tablist" id="tabs">
+                <li role="presentation" class="active">
+                    <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">
+                        Помощь
+                        <button class="close closeTab" type="button">×</button>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="tab1">
+                    Кликните на интересующем вас событии для отобажения дополнительной информации
+                </div>
             </div>
         </div>
     </div>
