--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body, html {
 
 /* Общие стили для vis.js объектов */
 .vis-timeline {
-    background: white;
+    background: #f0f0f0;
     /*border: none;*/
 }
 
@@ -42,7 +42,7 @@ body, html {
 
 .tab-content{
     /*background: white;*/
-    background-color: #f0f0f0;
+    /*background-color: #f0f0f0;*/
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 20px;
