--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,15 @@
     {% load static %}
 
     <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/vis.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
     <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/fullnameForm.css' %}">
-    <link rel="stylesheet" href="{% static 'css/search.css' %}">
     <link rel="stylesheet" href="{% static 'css/classItems.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <script type="text/javascript" src="{% static 'js/fullnameForm.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/infoTabs.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </head>
 
@@ -27,96 +20,19 @@
 </body>
 <div class="container-fluid">
     <div class="row">
-        <form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">
-            <div class="row">
-                {{ form.name }}
-                <button id="find_btn" type="submit" class="save btn btn-success">Найти</button>
-            </div>
-            <div class="row">
-                <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#filters"
-                        aria-expanded="false" aria-controls="collapseExample" id="filters_btn">
-                    Фильтры <span class="caret"></span>
-                </button>
-                <div class="collapse" id="filters">
-                    <div class="well">
-                        <!--- Datepicker widget !-->
-                        <div class="form-group">
-                            <label class="control-label"
-                                   for="{{ form.start_date.id_for_label }}">{{ form.start_date.label }}</label>
-                            <br>
-                            <div class='input-group date' id='start_date'>
-                                {{ form.start_date }}
-                                <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                             </span>
-                            </div>
-                        </div>
-                        <!--- Datepicker widget !-->
-
-                        <!--- Datepicker widget !-->
-                        <div class="form-group">
-                            <label class="control-label"
-                                   for="{{ form.end_date.id_for_label }}">{{ form.end_date.label }}</label>
-                            <br>
-                            <div class='input-group date' id='end_date'>
-                                {{ form.end_date }}
-                                <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                             </span>
-                            </div>
-                        </div>
-                        <!--- Datepicker widget !-->
-
-                        {% for field in form %}
-                            {% if field.name != 'name' and field.name != 'start_date'  and field.name != 'end_date' %}
-                                <div class="form-group">
-                                    <label class="control-label"
-                                           for="{{ field.id_for_label }}">{{ field.label }}</label>
-                                    <br>
-                                    {{ field }}
-                                </div>
-                            {% endif %}
-                        {% endfor %}
-                    </div>
-                </div>
-
-            </div>
-        </form>
+        {% include 'searchForm.html' %}
     </div>
 
     <div class="row">
         <div id="graph"></div>
-        <div id="fullname">
-            <h3 id="eventname">Test</h3>
-            <hr>
-            <div class="dates">
-                <div><span id="start"></span><span>-</span><span id="end"></span></div>
-                <div><b>Продолжительность: </b><span id="duration"></span> дн.</div>
-            </div>
-        </div>
     </div>
 
     <div class="row">
-        <div class="container" id="info_tabs">
-            <a href="#" id="btnAdd"><i class="icon-plus-sign-alt"></i> Add Tab</a>
-            <br><br>
+        {% include 'infoTabs.html' %}
+    </div>
 
-
-            <ul class="nav nav-tabs nav-justified" role="tablist" id="tabs">
-                <li role="presentation" class="active">
-                    <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">
-                        Помощь
-                        <button class="close closeTab" type="button">×</button>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="tab1">
-                    Кликните на интересующем вас событии для отобажения дополнительной информации
-                </div>
-            </div>
-        </div>
+    <div class="row">
+        {% include 'fullnameForm.html' %}
     </div>
 </div>
 </html>
