Реализовал поиск по нажатию кнопки

--- a/templates/infoTabs.html
+++ b/templates/infoTabs.html
@@ -17,7 +17,7 @@
 
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="tab1">
-            Кликните на интересующем вас событии для отобажения дополнительной информации
+            Кликните на интересующем вас событии для отображения дополнительной информации
         </div>
     </div>
 </div>
