--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,9 @@
     </div>
 
     <div class="row">
-        {% include 'infoTabs.html' %}
+        <div class="col-md-10 col-md-offset-1">
+            {% include 'infoTabs.html' %}
+        </div>
     </div>
 
     <div class="row">
