--- a/templates/infoTabs.html
+++ b/templates/infoTabs.html
@@ -1,12 +1,8 @@
 {% load static %}
 <script type="text/javascript" src="{% static 'js/infoTabs.js' %}"></script>
 
-<div class="container" id="info_tabs">
-    <a href="#" id="btnAdd"><i class="icon-plus-sign-alt"></i> Add Tab</a>
-    <br><br>
-
-
-    <ul class="nav nav-tabs nav-justified" role="tablist" id="tabs">
+<div id="info_tabs">
+    <ul class="nav nav-tabs" role="tablist" id="tabs">
         <li role="presentation" class="active">
             <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">
                 Помощь
@@ -17,7 +13,7 @@
 
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="tab1">
-            Кликните на интересующем вас событии для отображения дополнительной информации
+            <h4>Кликните на интересующем вас событии для отображения дополнительной информации</h4>
         </div>
     </div>
 </div>
