--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,9 @@
 </body>
 <div class="container-fluid">
     <div class="row">
-        {% include 'searchForm.html' %}
+        <div class="col-md-10 col-md-offset-1">
+            {% include 'searchForm.html' %}
+        </div>
     </div>
 
     <div class="row">
