--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -5,7 +5,6 @@
 
 <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
 <link rel="stylesheet" href="{% static 'css/search.css' %}">
-
 <form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">
     <div class="row">
         {{ form.name }}
@@ -58,6 +57,9 @@
                 {% endfor %}
             </div>
         </div>
-
     </div>
 </form>
+
+<div class="row">
+    <div class="alert alert-danger hidden" id="searchError" role="alert"></div>
+</div>
