Начал перенос на ecmascript 2015

--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-<script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'libs/moment-with-locales.js' %}"></script>
+<script type="text/javascript" src="{% static 'libs/bootstrap-datetimepicker.min.js' %}"></script>
 
 <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
 <link rel="stylesheet" href="{% static 'css/search.css' %}">
