--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     {% load static %}
 
-    <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/vis.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/vis.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/classItems.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script.js' %}"></script>
 </head>
 
 <body>
