--- a/templates/infoTabs.html
+++ b/templates/infoTabs.html
@@ -1,5 +1,5 @@
 {% load static %}
-<script type="text/javascript" src="{% static 'js/infoTabs.js' %}"></script>
+<script type="text/javascript" src="{% static 'infoTabs.js' %}"></script>
 
 <div id="info_tabs">
     <ul class="nav nav-tabs" role="tablist" id="tabs">
