--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,13 @@
 <head>
     {% load static %}
 
-{#    <script type="text/javascript" src="{% static 'libs/jquery-3.2.1.min.js' %}"></script>#}
-
-   <script type="text/javascript" src="{% static 'libs/vis.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
     <script type="text/javascript" src="{% static 'bundle.js' %}"></script>
-    <script type="text/javascript" src="{% static 'libs/bootstrap.min.js' %}"></script>
+{##}
+{#    <script type="text/javascript" src="{% static 'libs/bootstrap.min.js' %}"></script>#}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
+    <script type="text/javascript" src="{% static 'libs/vis.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
 
 
     <link rel="stylesheet" href="{% static 'css/classItems.css' %}">
