Вынес свои css в bundle.css

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,12 @@
 <head>
     {% load static %}
 
-    <script type="text/javascript" src="{% static 'bundle.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
 
-    <link rel="stylesheet" href="{% static 'css/classItems.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+    <script type="text/javascript" src="{% static 'bundle.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bundle.css' %}">
 </head>
 
 <body>
