- выделил search.js для инициализации поиска - выделил dateTimePickers.js для инициализации dateTimePicker - Добавил css импорт и js импорт timeline непосредственно из node_modules/dist

--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,8 +1,4 @@
-{% load static %}
-
-<link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.css' %}">
-<link rel="stylesheet" href="{% static 'css/search.css' %}">
-<form id="search" method="POST" action="{% url 'search' %}" class="post-form form-inline">
+<form id="search" method="POST" action="{% url 'search-url' %}" class="post-form form-inline">
     <div class="row">
         {{ form.name }}
         <button id="find_btn" type="submit" class="save btn btn-success">Найти</button>
