--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,8 @@
 <head>
     {% load static %}
 
-
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/vis-timeline-graph2d.min.css' %}">#}
 
     <script type="text/javascript" src="{% static 'bundle.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bundle.css' %}">
