--- a/templates/infoTabs.html
+++ b/templates/infoTabs.html
@@ -1,7 +1,7 @@
 <div id="info_tabs">
     <ul class="nav nav-tabs" role="tablist" id="tabs">
         <li role="presentation" class="active">
-            <a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">
+            <a href="#help-tab" aria-controls="help-tab" role="tab" data-toggle="tab">
                 Помощь
                 <button class="close closeTab" type="button">×</button>
             </a>
@@ -9,7 +9,7 @@
     </ul>
 
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="tab1">
+        <div role="tabpanel" class="tab-pane active" id="help-tab">
             <h4>Кликните на интересующем вас событии для отображения дополнительной информации</h4>
         </div>
     </div>
